# machine-learning-from-scratch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/miniml/: __init__.py  linear_model.py  metrics.py  neural_net.py  tree.py
tests/: test_linear.py  test_neural_net.py  test_tree.py
