[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "miniml"
version = "0.1.0"
description = "A from-scratch machine learning library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.4.0",
    "scikit-learn>=0.24.0",
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
